# ml_intro

./: House_Pricing.ipynb  LICENSE  Pipfile  README.md  pyproject.toml
data/house_prices/: README.md  data_description.json  data_description.yml
