[tool.poetry]
name = "ml_introduction"
version = "0.1.0"
description = "Introduction to Machine Learning notebooks"
authors = ["Clodéric Mars <cloderic.mars@gmail.com>"]
repository = "https://github.com/cloderic/ml_introduction"
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.2"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
pandas = "^1.0.3"
plotly = "^4.7.1"
sklearn = "^0.0"
seaborn = "^0.10.1"
keras = "^2.3.1"
tensorflow = "^2.2.0"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.1.3"

[tool.taskipy.tasks]
notebook = "jupyter lab ./"
run_house_pricing = "jupyter nbconvert --to notebook --execute ./House_Pricing.ipynb --inplace --ExecutePreprocessor.timeout=600"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
